vlib/v/checker/tests/identifier_name_starts_with_number_err.vv
fn main() {
	mut 3a := 1
	println(3a)
}
